[package]
name = "paction"
description = "Execute actions relative to process existance"
license = "MIT"
readme = "README.md"
version = "0.0.3"
authors = ["leaty <dev@leaty.net>"]
edition = "2018"

[package.metadata.arch]
arch = ["x86_64"]
makedepends = ["cargo"]

[[bin]]
name = "paction"
path = "src/main.rs"

[dependencies]
procfs = "0.9.1"
clap = "2.33.3"
serde = { version = "1.0.123", features = ["derive"] }
toml = "0.5.8"
git-version = "0.3.4"
xdg = "2.2.0"
users = "0.11.0"
